Update font, color and footer images

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,31 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap');
+@font-face {
+  font-family: "Benton Sans";
+  font-display: swap;
+  src: url("../assets/fonts/BentonSans_Regular.ttf");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Benton Sans Medium";
+  font-display: swap;
+  src: url("../assets/fonts/BentonSans_Medium_Regular.ttf");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "Benton Sans Bold";
+  font-display: swap;
+  src: url("../assets/fonts/BentonSans_Bold.ttf");
+  font-weight: 700;
+}
 
+
+
+:root {
+  --color-dark: #423E3B;
+  --color-accent: #AF1F8E;
+  --color-light: #ffffff;
+  --color-muted: rgba(66, 62, 59, 0.6);
+  --color-background: #EFEFEF;
+}
 
 /* NORMALIZE */
 * {
@@ -13,26 +39,44 @@
 /* NORMALIZE */
 
 body {
-    color: black;
-    font: 500 normal 22px/1.3 'Inter', sans-serif;
-    background: #EFEFEF;
+    color: var(--color-dark);
+    font: 500 normal 22px/1.3 'Benton Sans', sans-serif;
+    background-color: var(--color-background);
+    font-family: 'Benton Sans', sans-serif;
 }
 
+
+
+/* =============================
+   LAYOUT UTILITIES
+============================= */
+.centered-wide {
+  margin: 0 auto;
+  max-width: 1800px;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.right-wide {
+  margin-left: auto;
+  max-width: 1800px;
+  width: 100%;
+}
 
 
 /* Header */
 
 .site-header {
   position: absolute;
-  width: 100%;
   z-index: 100;
+  width: 100%;
 }
 
 .nav-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
+  padding-top: 20px;
 }
 
 .site-logo {
@@ -127,13 +171,6 @@ body {
 }
 
 
-.hero {
-  position: relative;
-  overflow: hidden;
-}
-
-
-
 /* Hero */
 
 .hero-section {
@@ -142,11 +179,12 @@ body {
   background-color: var(--color-light);
   background-image: url("../assets/img/hero-bg-mobile.png");
   background-size: cover;
-background-position: left 70% bottom;
+  background-position: left 70% bottom 20%;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   color: white;
+  padding-bottom: 10rem;
 }
 
 .hero-content {
@@ -156,19 +194,26 @@ background-position: left 70% bottom;
 
 .hero-title {
   font-family: 'Benton Sans Bold', sans-serif;
-  font-size: 50px;
+  font-size: 56px;
   font-weight: 700;
   max-width: 420px;
   text-transform: uppercase;
   line-height: 120%;
   color: var(--color-light);
+  
 }
 
 /* Responsive Sizes Combined */
 @media (min-width: 600px) {
+
+  .hero-section {
+  background-image: url("../assets/img/hero-bg-desktop.png");
+    
+  }
   .hero-title {
     max-width: 560px;
     font-size: 60px;
+    
   }
 }
 
@@ -176,18 +221,18 @@ background-position: left 70% bottom;
   .hero-title {
     max-width: 650px;
     font-size: 72px;
+    
   }
+  
 
 }
 
 @media (min-width: 1024px) {
-  .hero-section {
-    background-image: url("../assets/img/hero-bg-desktop.png");
-    
-  }
+
   .hero-title {
     max-width: 730px;
     font-size: 80px;
+    padding-top: 180px
   }
 
 }
@@ -196,6 +241,7 @@ background-position: left 70% bottom;
   .hero-title {
     max-width: 800px;
     font-size: 88px;
+    padding-top: 180px
   }
 }
 
@@ -203,6 +249,7 @@ background-position: left 70% bottom;
   .hero-title {
     max-width: 1000px;
     font-size: 96px;
+    padding-top: 180px
   }
 
 }
@@ -259,7 +306,7 @@ background-position: left 70% bottom;
 }
 .about-section .paragraph {
     width: 60%;
-    font: 500 normal 3.9vw/0.9 'Inter', sans-serif;
+    font: 500 normal 3.9vw/0.9 'Benton Sans', sans-serif;
     letter-spacing: -0.03em;
 }
 .about-section .word {
@@ -319,11 +366,12 @@ background-position: left 70% bottom;
 .product-section .slide {
     height: 100vh;
     box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.14);
+    z-index: 10;
 }
 .product-section .content-wrapper {
     width: 100%;
     height: 100%;
-    
+    z-index:100;
     perspective: 250vw;
 }
 .product-section .content {
@@ -335,6 +383,7 @@ background-position: left 70% bottom;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    z-index: 10;
 }
 .product-section .top {
     display: flex;
@@ -350,12 +399,12 @@ background-position: left 70% bottom;
     width: 32vw;
     display: flex;
     align-items: flex-end;
-    font: 500 normal 2vw / 1.1 'Inter', sans-serif;
+    font: 500 normal 2vw / 1.1 'Benton Sans', sans-serif;
     letter-spacing: -0.03em;
 }
 .product-section .bottom > div:last-child {
     display: flex;
-    font: 500 normal 10.5vw / 0.9 'Inter', sans-serif;
+    font: 500 normal 10.5vw / 0.9 'Benton Sans', sans-serif;
     letter-spacing: -0.06em;
     gap: 25px;
 }
@@ -364,7 +413,7 @@ background-position: left 70% bottom;
     border-radius: 0.02em;
 }
 .product-section .top p {
-    font: 500 normal 5vw / 0.9 'Inter', sans-serif;
+    font: 500 normal 5vw / 0.9 'Benton Sans', sans-serif;
     letter-spacing: -0.06em;
 }
 .product-section .top svg {
@@ -384,6 +433,12 @@ background-position: left 70% bottom;
 .product-section .slide:nth-child(3) .content {
     background: #F8DF8D;
     color: #121212;
+}
+
+@media (max-width: 768px) {
+    .product-section .bottom picture {
+    margin: 0 auto;
+}
 }
 
 @media (max-aspect-ratio: 1/1) {
@@ -406,176 +461,89 @@ background-position: left 70% bottom;
     }
     .product-section .bottom img {
         width: 100%;
-        aspect-ratio: 1;
-        object-fit: cover;
+        /* aspect-ratio: 1;
+        object-fit: cover; */
     }
 }
 
 
-.mwg_effect032 .pin-height {
+.teams-intro .pin-height {
     height: 400vh;
+ margin-top: -30vh;
 }
-.mwg_effect032 .container {
+.teams-intro .container {
     display: flex;
     justify-content: center;
     height: 100vh;
     align-items: center;
     overflow: hidden;
 }
-.mwg_effect032 .header {
+.teams-intro .header {
     position: absolute;
     top: 25px;
     left: 35%;
     width: 30%;
     text-align: center;
 }
-.mwg_effect032 svg {
+.teams-intro svg {
     width: 100%;
     height: auto;
     overflow: visible;
     transform: translate(0, 50%) scale(1.1, 1.1) /* Scaling to avoid seeing letter at the start and end */
 }
-.mwg_effect032 textPath {
+.teams-intro textPath {
     fill: currentColor;
-    font: 500 normal 10vw/normal 'Inter', sans-serif;
+    font: 500 normal 10vw/normal 'Benton Sans', sans-serif;
     letter-spacing: -0.05em;
     text-transform: uppercase;
 }
 
 @media (max-width: 768px) {
-    .mwg_effect032 .header {
+    .teams-intro .header {
         top: 15px;
         left: 15px;
         right: 15px;
         width: auto;
     }
-    .mwg_effect032 textPath {
-        font: 500 normal 50vw/normal 'Inter', sans-serif;
+    .teams-intro textPath {
+        font: 500 normal 50vw/normal 'Benton Sans Medium', sans-serif;
     }
 }
 
 
 
-.mwg_effect025 {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
+
+.mwg_effect027 {
+  margin: -50vh 0 0;
+    padding: 100vh 0;
 }
-.mwg_effect025 .container {
-    display: flex;
-}
-.mwg_effect025 .title {
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    font: 500 normal 4vw/0.9 'Inter', sans-serif;
-    letter-spacing: -0.03em;
-}
-.mwg_effect025 .card {
-    width: 20vw;
-    aspect-ratio: 0.8;
-}
-.mwg_effect025 .card:not(:first-child) {
-    margin: 0 0 0 -10vw;
-}
-.mwg_effect025 .card .content {
-    width: 100%;
-    height: 100%;
-    border-radius: 0.6em;
-    color: #000;
+.mwg_effect027 ul {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 25px;
-}
-.mwg_effect025 .card .content .top {
-    font: 500 normal 1.9vw / 0.9 'Inter', sans-serif;
-    letter-spacing: -0.03em;
-}
-.mwg_effect025 .card .content .bottom {
-    display: flex;
     align-items: center;
-    column-gap: 15px;
-    font: 500 normal 1.1vw / 0.9 'Inter', sans-serif;
-    letter-spacing: -0.03em;
-    border-top: 1px dashed #000;
-    padding: 25px 0 0;
 }
-.mwg_effect025 .card .content .bubble {
-    width: 3.3vw;
-    aspect-ratio: 1;
-    border-radius: 100%;
-    background-color: #FFF;
-    display: grid;
-    place-items: center;
+.mwg_effect027 li {
+    font: 500 clamp(86px, 12vw, 300px) / .8 'Inter', sans-serif;
+    letter-spacing: -.06em;
+    overflow: hidden;
+    display: flex;
 }
-.mwg_effect025 .card .content .bubble img {
-    width: 40%;
-    height: 40%;
-    object-fit: contain;
+.mwg_effect027 .letter {
+    position: relative; /* Establishes a reference for the child with absolute positioning */
+    display: inline-block;
 }
-.mwg_effect025 .card .content .job {
-    font: 500 normal 0.9vw / normal 'IBM Plex Mono';
-    text-transform: uppercase;
+.mwg_effect027 .letter span:last-child {
+    position: absolute;
+    bottom: 100%;
+    left: 0;
 }
-.mwg_effect025 .card:nth-child(1) {
-    z-index: 3;
-}
-.mwg_effect025 .card:nth-child(1) .content {
-    background-color: #F14A3A;
-}
-.mwg_effect025 .card:nth-child(2) {
-    z-index: 2;
-}
-.mwg_effect025 .card:nth-child(2) .content {
-    background-color: #FB7350;
-}
-.mwg_effect025 .card:nth-child(3) {
-    z-index: 7;
-}
-.mwg_effect025 .card:nth-child(3) .content {
-    background-color: #F79C42;
-}
-.mwg_effect025 .card:nth-child(4) {
-    z-index: 1;
-}
-.mwg_effect025 .card:nth-child(4) .content {
-    background-color: #FFDF40;
-}
-.mwg_effect025 .card:nth-child(5) {
-    z-index: 4;
-}
-.mwg_effect025 .card:nth-child(5) .content {
-    background-color: #DEDA8D;
-}
-.mwg_effect025 .card:nth-child(6) {
-    z-index: 5;
-}
-.mwg_effect025 .card:nth-child(6) .content {
-    background-color: #71CFA3;
-}
-.mwg_effect025 .card:nth-child(7) {
-    z-index: 8;
-}
-.mwg_effect025 .card:nth-child(7) .content {
-    background-color: #C4EF7A;
-}
-.mwg_effect025 .card:nth-child(8) {
-    z-index: 6;
-}
-.mwg_effect025 .card:nth-child(8) .content {
-    background-color: #BCEFFF;
-}
-
-
 
 
 
 .teams-section {
   position: relative;
   overflow: hidden;
+   margin: -100vh 0 0;
 }
 
 /* Header Layout */
@@ -686,33 +654,28 @@ background-position: left 70% bottom;
   pointer-events: none;
 }
 
-.team-header {
-  max-width: 40%;
-  padding: 20px 0 0 20px
-}
 
-/* =============================
-   FOOTER SECTION
-============================= */
+/* Footer */
+
 .site-footer {
   position: relative;
-  background: url('../assets/img/footer-bg-mobile.png') no-repeat center bottom;
-  background-position: center top;
+  background: url('../assets/img/footer-mobile.png') no-repeat center bottom;
+  background-position: top left 20%;
   background-size: cover;
-  height: 100vh;
-  color: #FFFFFF;
+  height: 150vh;
+  color: var(--color-light);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-bottom: 36px;
+  padding-bottom: 48px;
+  
 }
 
 @media screen and (min-width: 768px) {
   .site-footer {
     background-position: top right;
-    background: url('../assets/img/footer-bg.png') no-repeat center top;
+    background: url('../assets/img/footer-bg.png') no-repeat center bottom;
     padding-bottom: 80px;
-     background-size: cover;
   }
 }
 
@@ -720,21 +683,23 @@ background-position: left 70% bottom;
   font-size: 40px;
   font-family: 'Benton Sans Bold', sans-serif;
   text-align: right;
-  color: #FFFFFF;
-  margin-bottom: 42px;
+  color: var(--color-light);
+margin-bottom: 42px;
   max-width: 700px;
   margin-left: auto;
+  padding-right: 20px;
 }
 @media screen and (min-width: 768px) {
   .footer-headline {
     font-size: 52px;
     margin-right: 62px;
       margin-bottom: 120px;
+      padding-right: 0px;
   }
 }
 
 .footer-headline .accent {
-  color: #EA00B2;
+  color: var(--color-accent);
 }
 
 .footer-content {
@@ -743,7 +708,7 @@ background-position: left 70% bottom;
   align-items: flex-end;
   font-size: 20px;
   font-family: 'Benton Sans', sans-serif;
-  color: FFFFFF;
+  color: var(--color-light);
   gap: 20px;
 }
 
@@ -772,6 +737,12 @@ background-position: left 70% bottom;
 .footer-phone {
   white-space: nowrap;
 }
+
+.footer-phone a {
+  color: inherit;
+  text-decoration: none;
+}
+
 
 .footer-address {
   line-height: 1.4;
