--- a/css/main.css
+++ b/css/main.css
@@ -368,6 +368,10 @@ body {
     box-shadow: 3px 3px 30px rgba(0, 0, 0, 0.14);
     z-index: 10;
 }
+.product-section .slide.end-slide {
+  z-index: 100;
+  position: relative;
+}
 .product-section .content-wrapper {
     width: 100%;
     height: 100%;
