--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,28 +1,28 @@
 @font-face {
   font-family: "Benton Sans";
   font-display: swap;
-  src: url("../fonts/BentonSans_Regular.ttf");
+  src: url("/assets/fonts/BentonSans_Regular.ttf");
   font-weight: 400;
 }
 
 @font-face {
   font-family: "Benton Sans";
   font-display: swap;
-  src: url("../fonts/BentonSans_Medium_Regular.ttf");
+  src: url("/assets/fonts/BentonSans_Medium_Regular.ttf");
   font-weight: 500;
 }
 
 @font-face {
   font-family: "Benton Sans";
   font-display: swap;
-  src: url("../fonts/BentonSans_Bold.ttf");
+  src: url("/assets/fonts/BentonSans_Bold.ttf");
   font-weight: 700;
 }
 
 @font-face {
   font-family: "Ingeborg";
   font-display: swap;
-  src: url("../fonts/Ingeborg-BoldItalic.otf");
+  src: url("/assets/fonts/Ingeborg-BoldItalic.otf");
   font-weight: 700;
 }
 
@@ -131,7 +131,7 @@ a.link--arrow {
 }
 
 a.link--arrow::after {
-  content: url("../img/ico/arrow-outward-icon.svg");
+  content: url("/assets/img/ico/arrow-outward-icon.svg");
   margin-left: 12px;
   transition: transform .3s ease;
 }
@@ -334,7 +334,7 @@ body {
 }
 
 .hero-section.hero-section--home {
-  background-image: url("../assets/img/hero-bg-mobile.png");
+  background-image: url("/assets/img/hero-bg-mobile.png");
   background-size: cover;
   background-position: left 70% bottom 20%;
   background-repeat: no-repeat;
@@ -354,7 +354,7 @@ body {
 /* Responsive Images + your step sizes/max-widths */
 @media (min-width: 600px) {
   .hero-section.hero-section--home {
-    background-image: url("../assets/img/hero-bg-desktop.png");
+    background-image: url("/assets/img/hero-bg-desktop.png");
   }
 
   .hero-title {
@@ -829,7 +829,7 @@ body {
   left: 20px;
   width: 60px;
   height: 60px;
-  background: url("../assets/img/paw-print.png") no-repeat center/contain;
+  background: url("/assets/img/paw-print.png") no-repeat center/contain;
   pointer-events: none;
 }
 
@@ -838,7 +838,7 @@ body {
 
 .site-footer {
   position: relative;
-  background: url('../assets/img/footer-mobile.png') no-repeat;
+  background: url('/assets/img/footer-mobile.png') no-repeat;
   background-position: top left 20%;
   background-size: cover;
   height: 150vh;
@@ -853,7 +853,7 @@ body {
 @media screen and (min-width: 768px) {
   .site-footer {
     background-position: top right;
-    background: url('../assets/img/footer-bg.png') no-repeat;
+    background: url('/assets/img/footer-bg.png') no-repeat;
     background-size: cover;
     padding-bottom: 80px;
   }
@@ -942,7 +942,7 @@ body {
 .hero-section.hero-section--about {
   height: 70vh;
   /* shorter so next section is visible */
-  background-image: url("../assets/img/about-hero-mobile.png");
+  background-image: url("/assets/img/about-hero-mobile.png");
   background-size: cover;
   background-position: center bottom;
   background-repeat: no-repeat;
@@ -950,7 +950,7 @@ body {
 
 /* @media (min-width: 600px) {
   .hero-section.hero-section--about {
-    background-image: url("../img/about-hero-desktop.jpg");
+    background-image: url("/img/about-hero-desktop.jpg");
   }
 } */
 
