--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -453,6 +453,7 @@ body {
   align-items: center;
   padding: 0 25px;
   overflow: hidden;
+  position: relative;
 }
 
 .impact-section .paragraph {
@@ -676,6 +677,7 @@ body {
   height: 100vh;
   align-items: center;
   overflow: hidden;
+  position: relative;
 }
 
 .teams-intro .header {
