--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -421,8 +421,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 180px;
+  height: 180px;
   animation: spin 20s linear infinite;
   /* Slower spin looks better */
   transform-origin: center center;
