--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -393,6 +393,20 @@ body {
 }
 
 /* Impact Section */
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+.impact-section .header .left {
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.impact-section .header .left.fade-in {
+  animation: fadeIn 1.2s ease-in forwards;
+  animation-delay: 0.2s;
+}
 
 .impact-section .pin-height {
   height: 500vh;
